k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: REPLACE_ME
  namespace: REPLACE_ME
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  ingressClassName: traefik-internal
  rules:
    - host: REPLACE_ME.w1png.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: REPLACE_ME
                port:
                  number: 3000
